c4prj1_deck/grade.txt
Grading at Tue Oct  1 19:58:08 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:300:20: error: pointer targets in initialization differ in signedness [-Werror=pointer-sign]
   unsigned *match =(int *) malloc((hand->n_cards)*sizeof(*match));
                    ^
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
